<resources>
    <string name="app_name">Uri Demo</string>
    <string name="list_dialog_title">Selecione uma ação</string>
    <string name="transaction_enter_value">Digite o valor</string>
    <string name="transaction_send_button">Enviar Transação</string>
    <string name="transaction_value">Valor: </string>
    <string name="transaction_debit">Débito</string>
    <string name="transaction_credit">Crédito</string>
    <string name="transaction_sight">A Vista</string>
    <string name="transaction_installment">Parcelado</string>
    <string name="transaction_issuer">Parcelado emissor</string>
    <string name="transaction_no_installments">Parcelas</string>
    <string name="transaction_interest">Juros?</string>

    <string-array name="transactionType">
        <item>Débito</item>
        <item>Crédito</item>
    </string-array>

    <string-array name="installment">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="title_activity_list_transcations">ListTranscationsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_config">Configurações</string>
    <string name="title_new_transaction">Nova Transação</string>
    <string name="title_history">Histórico</string>
    <string name="hint_stone_code">Stone Code</string>
    <string name="save">Salvar</string>
</resources>
